--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -20,14 +20,24 @@ jobs:
           cp "$GITHUB_WORKSPACE/LICENSE" "$GITHUB_WORKSPACE/WideQuestLogIds/LICENSE"
           cp "$GITHUB_WORKSPACE/WideQuestLogIds.lua" "$GITHUB_WORKSPACE/WideQuestLogIds/WideQuestLogIds.lua"
 
-      # Runs a single command using the runners shell
-      - name: Package classic.
-        run: echo "WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-classic.zip"
-      #    cp "$GITHUB_WORKSPACE/WideQuestLogIds-classic.toc" "$GITHUB_WORKSPACE/WideQuestLogIds/WideQuestLogIds.toc"
-      #    zip -r "$GITHUB_WORKSPACE/WideQuestLogIds-classic.zip" "$GITHUB_WORKSPACE/WideQuestLogIds"
+      - name: Package classic
+        run: |
+          cp -f "$GITHUB_WORKSPACE/WideQuestLogIds-classic.toc" "$GITHUB_WORKSPACE/WideQuestLogIds/WideQuestLogIds.toc"
+          zip -r "$GITHUB_WORKSPACE/WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-classic.zip" "$GITHUB_WORKSPACE/WideQuestLogIds"
 
-      # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
+      - name: Package bcc
+        run: |
+          cp -f "$GITHUB_WORKSPACE/WideQuestLogIds-bcc.toc" "$GITHUB_WORKSPACE/WideQuestLogIds/WideQuestLogIds.toc"
+          zip -r "$GITHUB_WORKSPACE/WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-bcc.zip" "$GITHUB_WORKSPACE/WideQuestLogIds"
+          
+      - name: Package wrath
+        run: |
+          cp -f "$GITHUB_WORKSPACE/WideQuestLogIds-wrath.toc" "$GITHUB_WORKSPACE/WideQuestLogIds/WideQuestLogIds.toc"
+          zip -r "$GITHUB_WORKSPACE/WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-wrath.zip" "$GITHUB_WORKSPACE/WideQuestLogIds"
+
+      - name: Create release draft
+        run: |
+          gh release create "v${{ github.event.inputs.releaseVersion }}" --draft
+          gh release upload "v${{ github.event.inputs.releaseVersion }}" "$GITHUB_WORKSPACE/WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-classic.zip"
+          gh release upload "v${{ github.event.inputs.releaseVersion }}" "$GITHUB_WORKSPACE/WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-bcc.zip"
+          gh release upload "v${{ github.event.inputs.releaseVersion }}" "$GITHUB_WORKSPACE/WideQuestLogIds-v${{ github.event.inputs.releaseVersion }}-wrath.zip"
