--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   package:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
