--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Create release draft
         run: |
-          gh release create $REL_VER --draft --title "$REL_VER" "${GITHUB_WORKSPACE}/WideQuestLogIds-${REL_VER}-*.zip"
+          gh release create $REL_VER --draft --title "$REL_VER" "${GITHUB_WORKSPACE}/WideQuestLogIds-${REL_VER}-classic.zip"
           #gh release upload $REL_VER "$GITHUB_WORKSPACE/WideQuestLogIds-${REL_VER}-classic.zip"
           #gh release upload $REL_VER "$GITHUB_WORKSPACE/WideQuestLogIds-${REL_VER}-bcc.zip"
           #gh release upload $REL_VER "$GITHUB_WORKSPACE/WideQuestLogIds-${REL_VER}-wrath.zip"
